--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
       </intent-filter>
     </activity>
     <activity android:name=".view.write.WriteActivity" />
-    <activity android:name=".view.diaryDetail.DiaryDetailActivity" />
+    <activity android:name=".view.diaryDetail.DiaryDetailActivity"
+      android:launchMode="singleTask"
+      android:clearTaskOnLaunch="true"/>
     <activity android:name=".view.calendar.CalendarActivity"
       android:launchMode="singleTask"
       android:clearTaskOnLaunch="true"/>
