--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.chatty.android.chattyClient"
         minSdkVersion 24
@@ -39,7 +43,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0-alpha1'
+    implementation 'gun0912.ted:tedbottompicker:1.2.6'
+    implementation 'gun0912.ted:tedpermission:2.2.1'
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
 }
